objects/WM4SF3__WalkMeLicense__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>WM4SF3__CusEnv__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CusEnv</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Env__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Env</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be true if the customer has an extension of WalkMe along with the installed package</description>
        <label>Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM4SF3__LicenseID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LicenseID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Param__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__PrePackaged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PrePackaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM4SF3__QA_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA_Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Self_Hosted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to use the Self-Hosted Salesforce Solution</description>
        <label>Self_Hosted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM4SF3__Test_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Let the user use the test walkme account</description>
        <label>Test_Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM4SF3__User_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WM4SF3__User_Identifier_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Identifier Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__WalkMe_Mobile_Env__c</fullName>
        <defaultValue>&quot;production&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>WalkMe Mobile Env</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM4SF3__isMobileUiClassic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the mobile version of WM4SF1 will open Salesforce Classic UI and not Lightning Experience</description>
        <inlineHelpText>If checked the mobile version of WM4SF1 will open Salesforce Classic UI and not Lightning Experience</inlineHelpText>
        <label>isMobileUiClassic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM4SF3__mode__c</fullName>
        <description>the mode of work:prod, qa, local</description>
        <encryptionScheme>None</encryptionScheme>
        <label>mode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>WalkMe License</label>
</CustomObject>